fix: 콘텐츠 타입 파싱 및 ES-DB 정합성 문제 수정